--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"eslint-plugin-vuejs-accessibility": "^1.1.0",
 		"sass": "^1.32.7",
 		"sass-loader": "^12.0.0",
+		"vue-infinite-loading": "^2.4.5",
 		"vue-template-compiler": "^2.6.14"
 	}
 }
